# GenAI-infra-stack

./: README.md  docker-compose.yml
.github/: serveragllm_release.yml
.github/workflows/: createvectordb_release.yml  llm-chat_release.yml  release.yml  serveragllm_release.yml
demo/llm.chatui.service/: auth-proxy.yml  pv-and-pvc.yaml  simple-chat.yaml
demo/llm.gpu.service/: block_device_mapping.json  block_device_mapping_bottlerocket.json  get-user-data.sh
demo/llm.rag.service/: chat-serveragllmpluslb.yaml  chat-serveragllmpluslb_weaviate.yaml  pv-and-pvc.yaml  qa-db-pv-pvc.yaml  qa-db-s3-pv-pvc.yaml
demo/llm.summarizerui.service/: auth-proxy.yml  (+1 more)
dockers/llm.rag.service/: .env-local  Dockerfile  common.py  common_test.py  config.py  logging_config.py  makeDocker.sh  proxy_app.py  pyproject.toml  requirements.txt  serveragllm.py  serveragllm_milvus_local.py  serverragllm_csv_to_pgvector_local.py  serverragllm_csv_to_weaviate_local.py  serverragllm_jira_cvs_local.py  serverragllm_zendesk_csv_sql_local.py  setup.py
docs/: csv_to_json_steps.md  install.md  llm_observability.md  qa_in_a_box_local.md  rag-user-docs.md  run_rag_llm_locally.md  sql_setup.md  weaviate_k8s_setup.md  weaviate_local_setup.md
examples/: exports-mini-rag-local.sh  exports-mini-rag.sh
question_classification/: README.md
scripts/: README.md  jira_config.ini  jira_csv_local_developement.md  process_jira_tickets.py  process_sitemap.py  process_txt_files.py  process_zendesk_tickets.py  process_zendesk_tickets_old.py  requirements.txt  zendesk_config.ini  zendesk_config_old.ini
(+56 files in other folders)
